--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -49,6 +49,34 @@ cursor: pointer;
 color: #FEFEFE;
   }
 
+  .start{
+    position: absolute;
+    top: 11vh;
+    z-index: 1000;
+    background-color: #FFFFFF;
+    width: 150px;
+    height: 50px;
+
+  }
+  .begin{
+    position: absolute;
+    left: 0.5vw;
+    top: 1.5vh;
+    font: Roboto sans-serif;
+    background: #feffff;
+border-radius: 30px;
+font: Roboto sans-serif;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+  }
+  .menu{
+    position: absolute;
+    left: 5.5vw;
+    top: 1.3vh;
+  }
+
 
 .home{
 justify-content: space-around;
@@ -78,7 +106,7 @@ color: #FEFEFE;
 width: 356px;
 height: 815px;
 
-background: linear-gradient(180deg, rgba(0, 0, 0, 0.886377) 0%, rgba(212, 213, 215, 0.666) 100%);
+background: linear-gradient(180deg, rgba(0, 0, 0, 0.956377) 0%, rgba(212, 213, 215, 0.666) 100%);
   }
 
   .close_analysis{
@@ -86,6 +114,13 @@ background: linear-gradient(180deg, rgba(0, 0, 0, 0.886377) 0%, rgba(212, 213, 2
     top:1vh;
     left: 17vw;
   }
+  .close_chart_container{
+    position: absolute;
+    top:1vh;
+    left: 37vw;
+    
+  }
+
 
   .region{
     position: absolute;
@@ -101,108 +136,87 @@ line-height: 19px;
 color: #FFFFFF;
   }
 
- 
-
 
   /* test for custom select */
 
-  .select {
+  .select_region{
     position: absolute;
     top: 8vh;
-    display:flex;
-    flex-direction: column;
-    position:relative;
+    left: 0.5vw;
+  }
+  .routes{
+    position: absolute;
+    top: 15vh;
     margin-left: 1vw;
     margin-right: 1vw;
-    /* background: rgba(194, 60, 60, 0.41); */
-
-    width:90%;
-    height:40px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 19px;
+color: #FFFFFF;
   }
-  
-  .option {
-    padding:0 30px 0 10px;
-    min-height:40px;
-    display:flex;
-    align-items:center;
-    background:rgb(31, 31, 31);
-    border-top:#fff solid 1px;
-    position:absolute;
-    top:0;
-    width: 100%;
-    pointer-events:none;
-    order:2;
-    z-index:1;
-    transition:background .4s ease-in-out;
-    box-sizing:border-box;
-    overflow:hidden;
-    white-space:nowrap;
-    color: #fff;
-    /* border-radius: 15px; */
-  }
-  
-  .option:hover {
-    background:#666;
-  }
-  
-  .select:focus .option {
-    position:relative;
-    pointer-events:all;
-  }
-  
-  input {
-    opacity:0;
-    position:absolute;
-    left:-99999px;
-    
-  }
-  
-  input:checked + label {
-    order: 1;
-    z-index:2;
-    background:#666;
-    border-top:none;
-    position:relative;
-   
-  }
-  
-  input:checked + label:after {
-    content:'';
-    width: 0; 
-      height: 0; 
-      border-left: 5px solid transparent;
-      border-right: 5px solid transparent;
-      border-top: 5px solid white;
-    position:absolute;
-    right:10px;
-    top:calc(50% - 2.5px);
-    pointer-events:none;
-    z-index:3;
-   
-  }
-  
-  input:checked + label:before {
-    position:absolute;
-    right:0;
-    height: 40px;
-    width: 40px;
-    content: '';
-    background:#666;
-    
+  .select_route{
+    position: absolute;
+    top: 18vh;
+    left: 0.5vw;
   }
 
+  .causes{
+    position: absolute;
+    top: 25vh;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    font: Roboto sans-serif;
+
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 19px;
+color: #FFFFFF;
+  }
+  .select_cause{
+    position: absolute;
+    top: 28vh;
+    left: 0.5vw;
+  }
+
+  .stats{
+    position: absolute;
+    top: 50vh;
+    left: 3.3vw;
+    width: 117px;
+height: 19.03px;
+width: 207px;
+height: 46.08px;
+
+background: #0C0D0D;
+border-radius: 30px;
+font: Roboto sans-serif;
+font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 19px;
+/* identical to box height */
+
+
+color: #FFFFFF;
+  }
+
+
+  /* chart container */
  
+ .chart_container{
+  position: absolute;
+  top: 67.95vh;
+  left: 18.5vw;
+width: 740px;
+height: 280px;
+z-index: 1000;
+background: linear-gradient(90.13deg, rgba(12, 13, 13, 0.9) 0.21%, rgba(93, 98, 99, 0.9) 52.9%, rgba(144, 148, 150, 0.800763) 99.97%, rgba(30, 77, 92, 0.765) 99.98%, rgba(255, 255, 255, 0.9) 99.98%);
+ }
   
-  /* .region_data{
-    position: absolute;
-    top: 8vh;
-    margin-left: 1vw;
-    margin-right: 1vw;
-    width: 90%;
-    height: 33px;
-    background: rgba(255, 255, 255, 0.41);
-    border-radius: 15px;
-  } */
+  
   .map_controls{
     /* position: absolute; */
       top: 50vh;
@@ -245,10 +259,10 @@ color: #FFFFFF;
     .base_map_name {
       font-size: 15px;
       cursor: pointer;
-      border-bottom: #0C92DD solid 3px;
+      border-bottom: #080808 solid 3px;
     }
     .base_map_name:hover {
-      background-color: #0C92DD;
+      background-color: #858585;
     }
     .download{
       z-index: 800;
