--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -323,6 +323,14 @@ background: linear-gradient(90.13deg, rgba(12, 13, 13, 0.9) 0.21%, rgba(61, 61, 
       border-radius: 20px;
       padding: 10px;
       }
+
+      .separator{
+        position: absolute;
+        top: 27vh;
+        width: 250px;
+        height: 0px;
+        border: 1px solid #848080;
+      }
       .title{
         position: absolute;
         top: 2vh;
