--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -287,7 +287,7 @@ background: linear-gradient(90.13deg, rgba(12, 13, 13, 0.9) 0.21%, rgba(61, 61, 
       position: absolute;
       z-index: 401;
       /* margin-top: 5%; */
-      top: 28vh;
+      top: 15vh;
       left:90%;
       background-color: #FFFFFF;
       border-radius: 10px;
@@ -305,6 +305,14 @@ background: linear-gradient(90.13deg, rgba(12, 13, 13, 0.9) 0.21%, rgba(61, 61, 
       z-index: 800;
       position: absolute;
       top: 20%;
+      left:97%;
+      cursor: pointer;
+    
+    }
+    .info_icon{
+      z-index: 800;
+      position: absolute;
+      top: 25%;
       left:97%;
       cursor: pointer;
     
