--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -331,9 +331,9 @@ background: linear-gradient(90.13deg, rgba(12, 13, 13, 0.9) 0.21%, rgba(61, 61, 
     .info{
       position: absolute;
       top: 40vh;
-      left: 84vw;
+      left: 75vw;
       z-index: 1000;
-      width: 271px;
+      width: 371px;
       height: 512px;
       font-family: "Arial", Arial, serif;
       background: linear-gradient(180deg, #F8F8F8 0%, #EDF4F8 41.67%, rgba(180, 184, 186, 0.584565) 79.69%, rgba(55, 57, 57, 0.51) 100%);
@@ -379,11 +379,30 @@ background: linear-gradient(90.13deg, rgba(12, 13, 13, 0.9) 0.21%, rgba(61, 61, 
       }
       #map2{
         position: absolute;
-        top: 40vh;
+        top: 35vh;
+        /* left: 57.5vw; */
         left: 70vw;
-        height: 500px;
+        height: 512px;
         width: 500px;
-        z-index: 1000;
+        z-index: 2500;
 
       }
+
+      .googlemap_container{
+        position: absolute;
+        top: 5vh;
+       
+        z-index: 1000;
       
+
+      }
+      .map_button{
+        position: absolute;
+         top: 65vh;
+          left: 93.42vw;
+         z-index: 2500;
+         background-color: #FFFFFF;
+         border: none;
+         height: 48px;
+        width: 41px;
+      }
