--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -512,3 +512,8 @@ background: linear-gradient(90.13deg, rgba(12, 13, 13, 0.9) 0.21%, rgba(61, 61, 
          height: 48px;
         width: 41px;
       }
+
+      .info_title{
+        color: #099f46;
+        font-weight: bold;
+      }
