--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -235,7 +235,7 @@ color: #FFFFFF;
 
 
 
-  .mitigation{
+  .mitigations{
     position: absolute;
     top: 44vh;
     margin-left: 1vw;
@@ -566,7 +566,8 @@ background: linear-gradient(90.13deg, rgba(12, 13, 13, 0.9) 0.21%, rgba(61, 61, 
         font-weight: bold;
         font-size: 28px;
         position: relative;
-        top: 2vh;
+        top: 15vh;
+        line-height: 56px;
       }
       .alert_button{
         position: relative;
