--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -155,7 +155,7 @@ background-size: auto; */
   .close_chart_container{
     position: absolute;
     top:1vh;
-    left: 37vw;
+    left: 26.5vw;
     
   }
   .close_info{
@@ -400,10 +400,11 @@ color: #FFFFFF;
  .chart_container{
   position: absolute;
   top: 67.95vh;
-  left: 22.6vw;
-width: 740px;
+  left: 23.6vw;
+width: 540px;
 height: 280px;
 z-index: 1000;
+border-radius: 15px;
 background: linear-gradient(90.13deg, rgba(12, 13, 13, 0.9) 0.21%, rgba(61, 61, 61, 0.9) 52.9%, rgba(94, 95, 95, 0.801) 99.97%, 99.98%, rgba(97, 97, 97, 0.9) 99.98%);
  }
   
@@ -527,15 +528,15 @@ background: linear-gradient(90.13deg, rgba(12, 13, 13, 0.9) 0.21%, rgba(61, 61, 
       .title{
         position: absolute;
         top: 2vh;
-        left: 15vw;
+        left: 10vw;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         color: #FFFFFF;
-        text-decoration: underline;
+        /* text-decoration: underline; */
       }
       .county_chart{
         position: absolute;
         top: 5vh;
-        /* left: 0.5vw; */
+        left: 3vw;
       }
       .chart_text{
         position: absolute;
