implemented legend for the hotspots risk severity

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -756,4 +756,13 @@ transform: rotate(-4deg);
       background:transparent;
       /* display: none; */
   }
+
+  #info_legend{
+    position: absolute;
+   
+    /* background-color: #099f46; */
+    top: 58.5vh;
+    left: 60vw;
+    z-index: 3000;
+  }
  
