--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -2,18 +2,29 @@
     width: 100vw;
     height: 100vh;
     position: fixed;
-    z-index: 1000;
+    z-index: 5000;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  
+    /* background-color: #099f46; */
+    
     
    
   } 
+  .app2{
+    position: absolute;
+    /* top: 1vh; */
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(180deg, rgba(57, 58, 58, 0.886) 100%, rgba(71, 71, 71, 0.9) 100%);
+    z-index: 4000;
+  }
   .description{
     position: absolute;
     top: 32vh;
     left: 40vw;
     width: 20vw;
     height: 35vh;
-    z-index: 2500;
+    z-index: 4500;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #000;
     color: #fff;
